--- a/journey_central/journey/build.gradle
+++ b/journey_central/journey/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 group = 'com.journey.central'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+sourceCompatibility = '11'
 
 configurations {
 	compileOnly {
@@ -22,11 +22,19 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.session:spring-session-core'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'junit:junit:4.13.2'
+	implementation 'org.projectlombok:lombok:1.18.22'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.security:spring-security-web:5.5.1'
+	implementation 'org.springframework.security:spring-security-core:5.5.1'
+	implementation 'org.springframework.security:spring-security-config:5.5.1'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	implementation 'io.ultreia:bluecove:2.1.1'
+
 }
 
 test {
