--- a/journey_central/Dockerfile
+++ b/journey_central/Dockerfile
@@ -1,25 +1,16 @@
-# temp container to build using gradle
-FROM gradle:5.3.0-jdk-alpine AS TEMP_BUILD_IMAGE
-ENV APP_HOME=/usr/app/
-WORKDIR $APP_HOME
-COPY build.gradle settings.gradle $APP_HOME
- 
-COPY gradle $APP_HOME/gradle
-COPY --chown=gradle:gradle . /home/gradle/src
-USER root
-RUN chown -R gradle /home/gradle/src
-    
-RUN gradle build || return 0
-COPY . .
-RUN gradle clean build
-
 # actual container
-FROM adoptopenjdk/openjdk11:alpine-jre
+FROM amazoncorretto:17-alpine3.15-full
 ENV APP_HOME=/usr/app/
+RUN apk add gcompat
+ENV LD_PRELOAD=/lib/libgcompat.so.0
 
 WORKDIR $APP_HOME
-ARG JAR_FILE=build/libs/*.jar
-COPY ${JAR_FILE} app.jar
-    
+ARG JAR_FILE=build/libs/journey-0.0.1-SNAPSHOT.jar
+COPY journey_central/${JAR_FILE} ./app.jar
+COPY ./integrations ../integrations
+COPY ./journey_central/treeassistant-tatan.json ./treeassistant-tatan.json
+RUN apk add --update pulseaudio
+
+
 EXPOSE 8080
 ENTRYPOINT ["java","-jar","app.jar"]
