--- a/journey_central/build.gradle
+++ b/journey_central/build.gradle
@@ -16,6 +16,9 @@ configurations {
 
 repositories {
 	mavenCentral()
+	maven {
+		url "https://packages.confluent.io/maven/"
+	}
 }
 
 dependencies {
@@ -49,9 +52,7 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/commons-io/commons-io
 	implementation 'commons-io:commons-io:2.6'
-
-	// https://mvnrepository.com/artifact/org.python/jython
-	implementation 'org.python:jython-standalone:2.7.2'
+	implementation "org.springframework.kafka:spring-kafka"
 }
 
 test {
