removed folder for mysql init file

--- a/.gitignore
+++ b/.gitignore
@@ -244,4 +244,8 @@ log/
 venv/
 .env
 
+*.iml
+*/*/*.iml
+*/*.iml
+
 # End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,visualstudiocode
