Fixed several problems with docker not using the python api

--- a/channels/JourneyTelegramBot/Dockerfile
+++ b/channels/JourneyTelegramBot/Dockerfile
@@ -1,6 +1,9 @@
 FROM python:3.10
 WORKDIR /app
-COPY requirements.txt ./
+COPY ./channels/JourneyTelegramBot/requirements.txt ./
 RUN pip install -r requirements.txt
-COPY ./ /app
+COPY ./apis/PythonAPI/requirements.txt ./
+RUN pip install -r requirements.txt
+COPY ./channels/JourneyTelegramBot /app
+COPY ./apis/PythonAPI /app
 CMD ["python","-u","main.py"]
